// This program has been developed by students from the bachelor Computer Science at Utrecht University within the Software and Game project course 2016 semester 2 & 2017 semester 2
// Â©Copyright Utrecht University (Department of Information and Computing Sciences)
syntax = "proto3";
package tors_proto;

// Type of the action
enum ActionType {
    CombineTrain = 0;
    Exit = 1;
    MoveTrainNaive = 2;
    MoveTrainAdvanced = 3;
    Service = 4;
    SetBack = 5;
    SplitTrain = 6;
    Wait = 7;
    Other = 8;
    Arrive = 9;
}
