syntax = "proto3";

package HIP_protos;
import "HIP_Location.proto";
import "HIP_Scenario.proto";

// This message contains the result of a shunting algorithm.
message Plan {
	repeated Action actions = 1;

	// A list of all TrackParts. From this a rail graph can be constructed.
	// This field should be temporary and be replaced as soon as we send input to the algorithm.
	repeated TrackPart trackParts = 2;
}

message Action {
	// The time interval of this action.
	// Times are in seconds since the epoch.
	uint64 startTime = 1;
	uint64 endTime = 2;

	// The type of this action (e.g. cleaning, moving, waiting)
	TaskType taskType = 3;

	// The ShuntingUnit to which this Action applies
	ShuntingUnit shuntingUnit = 4;

	// The TrackPart ID on which this Action occurs.
	// If taskType = Move, then trackPart specifies the move destination,
	// and the resources specify the path.
	uint64 location = 5;

	// Other resources besides the TrackPart involved with the Action.
	// For example for taskType = InternalCleaning there could be
	// a CleaningPlatform Facility Resource.
	repeated Resource resources = 6;

    // Train units involved in this Action
    // If not specified, all train units are involved.
    repeated string trainUnitIds = 7;
}